--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "set NODE_ENV=production && node ./dist/",
-    "dev": "set NODE_ENV=development&& nodemon ./src/index.js"
+    "start": "set NODE_ENV=production&& node ./src/server.js",
+    "dev": "set NODE_ENV=development&& nodemon ./src/server.js"
   },
   "author": "Igor Fenikowski",
   "license": "ISC",
