--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mysql2": "^3.3.1"
   },
   "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.22"
   }
 }
